Fixed review slider cutoff issue.

--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -34,7 +34,7 @@ article {
 }
 
 .title {
-  width: 90vw;
+  width: 50vw;
   padding: 1rem;
   border-bottom: 2px solid #b26229;
   text-align: center;
