--- a/assets/styles/reviews.css
+++ b/assets/styles/reviews.css
@@ -18,18 +18,18 @@
 /* This container holds all cards side-by-side and will be animated */
 .review-slides-inner {
   display: flex;
+  gap: 10px;
   transition: transform 0.6s ease-in-out;
 }
 
 /* Each card takes up the full width of the wrapper at any given time */
 .review-card {
-  flex: 0 0 99%;
+  flex: 0 0 100%;
   background-color: rgba(249, 249, 249, .75);
   border-radius: 10px;
   padding: 20px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  margin: 5px;
   display: flex;
   flex-direction: column;
   justify-content: center;
